nefcloud/oauth2-proxy/namespace.yaml
# Generated by flux-helm.sh from ./helm. Do not edit; change ./helm instead.
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
