nefcloud/oauth2-proxy/callback-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-callback-ingress
  namespace: oauth2-proxy
spec:
  rules:
    - host: "*.nefcloud.top"
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-release
                port:
                  number: 80
